--- a/Containers/RevProxy(Nginx)/dockerfile
+++ b/Containers/RevProxy(Nginx)/dockerfile
@@ -1,10 +1,4 @@
-# This dockerfile utilizes components licensed by their respective owners/authors.
-# Prior to utilizing this file or resulting images please review the respective licenses at: http://nginx.org/LICENSE
-
-# microsoft github reference: https://github.com/Microsoft/Virtualization-Documentation/tree/master/windows-container-samples/windowsservercore/nginx
-
-
-FROM windowsservercore
+FROM windowsservercore:10.0.14300.1000
 
 LABEL Description="Nginx" Vendor=Nginx" Version="1.1.13"
 
@@ -12,3 +6,7 @@ COPY nginx /nginx
 COPY nginx.conf /nginx/conf/nginx.conf
 
 CMD [ "/nginx/nginx.exe" ]
+
+
+# docker build -t=andrew/revproxy:latest .
+# docker run --rm -t -i andrew/revproxy cmd.exe
