--- a/Containers/RevProxy(Nginx)/nginx.conf
+++ b/Containers/RevProxy(Nginx)/nginx.conf
@@ -1,13 +1,34 @@
-http {
-  upstream demoweb {
-    server web1;
-    server web2;
-  }
+#user  nobody;
+worker_processes  1;
 
-  server {
-    listen 80;
-    location / {
-      proxy_pass http://demoweb;
-    }
-  }
+events {
+    worker_connections  1024;
+}
+
+http {
+	server {
+		listen 80;
+
+		location / {
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+			proxy_set_header Host $http_host;
+			proxy_set_header X-NginX-Proxy true;
+
+			proxy_pass http://io_nodes;
+			proxy_redirect off;
+
+			# Socket.IO Support
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+		}
+	}
+
+	upstream io_nodes {
+		ip_hash;
+		server 192.168.100.132:81;
+		server 192.168.100.132:82;
+	}
 }
