update nginx config & dockerfile

--- a/Containers/RevProxy(IIS-ARR)/dockerfile
+++ b/Containers/RevProxy(IIS-ARR)/dockerfile
@@ -1,7 +1,7 @@
-FROM windowsservercore:10.0.14300.1000
+# FROM windowsservercore:10.0.14300.1000
+# RUN powershell -Command Add-WindowsFeature Web-Server
 
-RUN powershell -Command Add-WindowsFeature Web-Server
-
+FROM microsoft/iis
 
 WORKDIR /
 
