--- a/Containers/RevProxy(Nginx)/nginx.conf
+++ b/Containers/RevProxy(Nginx)/nginx.conf
@@ -10,19 +10,8 @@ http {
 		listen 80;
 
 		location / {
-			proxy_set_header X-Real-IP $remote_addr;
-			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-			proxy_set_header X-Forwarded-Proto $scheme;
-			proxy_set_header Host $http_host;
-			proxy_set_header X-NginX-Proxy true;
-
-			proxy_pass http://io_nodes;
+			proxy_pass http://www.google.com;
 			proxy_redirect off;
-
-			# Socket.IO Support
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "upgrade";
 		}
 	}
 
