--- a/Containers/RevProxy(IIS-ARR)/dockerfile
+++ b/Containers/RevProxy(IIS-ARR)/dockerfile
@@ -34,5 +34,5 @@ RUN reg add HKLM\SOFTWARE\Microsoft\InetStp /v MajorVersion /t REG_DWORD /d 0xa 
 ADD ./start.ps1 /
 
 CMD powershell ./start.ps1 -serverfarms \"%serverfarms%\" -Verbose
-# docker run -d -v C:/temp/:C:/temp/ -e serverfarms="[{'name':'Maxtest123','servers':[{'address':'172.21.116.32'}]}]" --link web1:w
-eb1 -p 80:80 knom/iis-arr
+# docker run -d -v C:/temp/:C:/temp/ -e serverfarms="[{'name':'Maxtest123','servers':[{'address':'172.21.116.32'}]}]" --link web1:web1 -p 80:80 knom/iis-arr
+# docker run -d -e serverfarms="[{'name':'DemoFarm','servers':[{'address':'demo81'},{'address':'demo82'}]}]" --link demo81 --link demo82 -p 80:80 andrew/iis-arr:latest
