--- a/Containers/RevProxy(Nginx)/nginx.conf
+++ b/Containers/RevProxy(Nginx)/nginx.conf
@@ -7,17 +7,17 @@ events {
 
 http {
 	server {
-		listen 80;
+		listen 8000;
 
 		location / {
-			proxy_pass http://www.google.com;
+			proxy_pass http://io_nodes ;
 			proxy_redirect off;
 		}
 	}
 
 	upstream io_nodes {
 		ip_hash;
-		server 192.168.100.132:81;
-		server 192.168.100.132:82;
+		server 172.16.5.40:81;
+		server 172.16.5.40:82;
 	}
 }
