--- a/Containers/Web/dockerfile
+++ b/Containers/Web/dockerfile
@@ -11,6 +11,7 @@ LABEL Description="open camp demo" Vendor="Andrew Studio" Version="8.27.0.0"
 RUN powershell -Command Add-WindowsFeature Web-Server
 RUN dism /online /enable-feature /all /featurename:IIS-ASPNET45
 ADD webapp c:/inetpub/wwwroot/
+# ADD ../../DemoWeb c:/inetpub/wwwroot/
 
 CMD [ "ping", "localhost", "-t" ]
 
